Added some configs to improve performance of GC